test/should_pass/basic_005.grg
actions basic_005;

rule r {
	pattern {
		negative {
		}
	}
	modify {
	}
}

