test/should_fail/enum_002.grg
actions enum_002 using enum_model_004;

rule r {
	pattern {}
	modify {}
}
